# ecom_admin_tj

./: .gitignore  MANIFEST.in  Makefile  README.md  finance.md  manage.py  pyproject.toml  requirement.txt
ecom_admin_tj/common/: __init__.py  base.py  excel_format_mixin.py
ecom_admin_tj/lazada/: README.md  __init__.py  __main__.py  lazada.py  lazada_script.py
ecom_admin_tj/lazada/mapping/: __main__.py  lazada_mapping_script.py
ecom_admin_tj/shopee/: __init__.py  __main__.py  shopee.py  shopee_script.py
ecom_admin_tj/shopee/finance/: __init__.py  __main__.py  shopee_finance.py
ecom_admin_tj/shopee/finance/new_report/: __main__.py
ecom_admin_tj/tiktok/: README.md  __init__.py  __main__.py  tiktok.py  tiktok_script.py
ecom_admin_tj/tiktok/mapping/: __init__.py  tiktok_mapping_script.py
