[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
  "venv/",
  "outputs/",
  "*.xlsx",
  "*.csv",
  "*.json",
  "__pycache__/",
  "*.pyc",
  ".git/",
]

[tool.hatch.build.targets.wheel]
exclude = [
  "venv/",
  "outputs/",
  "*.xlsx",
  "*.csv",
  "*.json",
  "__pycache__/",
  "*.pyc",
  ".git/",
]

[project]
name = "ecom_admin_tj"
version = "0.0.12"
authors = [
  { name="Pitsanu Namnil", email="lockdoor@gmail.com" },
]
description = "Multi-platform e-commerce data pipeline"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy",
  "pandas",
  "openpyxl"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
